--- a/desktop/DeMoD-Note.desktop
+++ b/desktop/DeMoD-Note.desktop
@@ -3,7 +3,7 @@ Name=DeMoD-Note
 Comment=Deterministic Monophonic Note Detector
 Comment[fr]=Détecteur de notes monophonique déterministe
 Exec=/home/asher/DeMoD-Note/desktop/DeMoD-Note.sh
-Icon=audio-x-generic
+Icon=../DeMoD-Japan.png
 Terminal=true
 Type=Application
 Categories=Audio;AudioVideo;Music;MIDI;Utility;
