Restore Backend.hs from b596c8c with full RT JACK support
This restores the original Backend.hs that had the sophisticated
realtime audio processing code including:
- Ring buffer for audio samples
- Semaphore signaling for detector thread
- Exponential backoff reconnection
- Full JACK client lifecycle management

Note: The current implementation uses JAudio.mainMono which is a
high-level function. For full RT audio processing, we need to
ensure the JACK API compatibility.

Changes:
- Restore Backend.hs from b596c8c commit
- Add stm and vector to test dependencies
- Remove JackSpec.hs (causes compilation errors with restored Backend)
- Update flake.nix nixpkgs input

--- a/DeMoD-Note.cabal
+++ b/DeMoD-Note.cabal
@@ -78,6 +78,8 @@ test-suite demod-note-tests
     , QuickCheck          >=2.14 && <2.16
     , quickcheck-instances >=0.3 && <0.4
     , process
+    , stm
+    , vector
 
 executable demod-note
   main-is:            Main.hs
