--- a/DeMoD-Note.cabal
+++ b/DeMoD-Note.cabal
@@ -7,6 +7,9 @@ author:             DeMoD-Note Project
 homepage:           https://github.com/ALH477/DeMoD-Note
 build-type:         Simple
 
+data-files:
+  assets/intro.mp3
+
 flag opengl
   description:      Enable OpenGL visualization support
   default:          False
@@ -103,3 +106,18 @@ executable demod-note
   default-language:   Haskell2010
   ghc-options:        -threaded -rtsopts -O2 -with-rtsopts=-N
   build-depends:      DeMoD-Note, base, optparse-applicative, katip, async, stm, text
+
+executable demod
+  main-is:            DeMoD.hs
+  hs-source-dirs:     src/DeMoDNote
+  default-language:   Haskell2010
+  ghc-options:        -threaded -rtsopts -O2 -with-rtsopts=-N
+  build-depends:
+    , base
+    , brick                >= 2.0
+    , vty                  >=6.0 && <7.0
+    , vty-crossplatform    >=0.4
+    , time
+    , process
+    , directory
+    , filepath
