--- a/DeMoD-Note.cabal
+++ b/DeMoD-Note.cabal
@@ -82,11 +82,14 @@ test-suite demod-note-tests
   other-modules:
     DeMoDNote.ArpeggioSpec
     DeMoDNote.AudioValidationSpec
+    DeMoDNote.BackendSpec
     DeMoDNote.BPMSpec
     DeMoDNote.ConfigSpec
     DeMoDNote.DetectorSpec
+    DeMoDNote.OSCSpec
     DeMoDNote.PresetSpec
     DeMoDNote.ScaleSpec
+    DeMoDNote.SoundFontSpec
   hs-source-dirs:    test
   default-language:  Haskell2010
   ghc-options:       -Wall -threaded
@@ -99,6 +102,7 @@ test-suite demod-note-tests
     , process
     , stm
     , vector
+    , hosc
 
 executable demod-note
   main-is:            Main.hs
