Comprehensive fixes: TUI improvements, error handling, FluidSynth, recording
- TUI: Fix change detection key, JackError display, note history, palette selector
- Add Error.hs with typed DeMoDError sum type
- Add --synth option for FluidSynth audio output
- Add --record option for session recording (protobuf + csv)
- Add Util.hs with common utilities (safeIndex, clamp, chunksOf)
- Add pre-computed Hann windows in Detector.hs
- Add module header documentation to Types, Config, Scale, Arpeggio, BPM
- Fix Opengl.hs hardcoded audio path, add caching for audio player
- Fix partial functions (minimumBy, safeIndex)
- Add command injection protection in Backend.hs
- Implement preset application in Config/Preset

--- a/DeMoD-Note.cabal
+++ b/DeMoD-Note.cabal
@@ -22,13 +22,16 @@ library
     DeMoDNote.Detector
     DeMoDNote.Backend
     DeMoDNote.OSC
+    DeMoDNote.Error
     DeMoDNote.Monitor
+    DeMoDNote.Recording
     DeMoDNote.Scale
     DeMoDNote.Arpeggio
     DeMoDNote.BPM
     DeMoDNote.Preset
     DeMoDNote.SoundFont
     DeMoDNote.TUI
+    DeMoDNote.Util
   hs-source-dirs:     src
   default-language:   Haskell2010
   ghc-options:        -Wall -O2 -threaded
@@ -63,6 +66,8 @@ library
     , containers
     , transformers
     , explicit-exception
+    , binary
+    , deepseq
   pkgconfig-depends: jack >=1.9, fftw3
 
   if flag(opengl)
