fixed warnings and opengl

--- a/DeMoD-Note.cabal
+++ b/DeMoD-Note.cabal
@@ -25,6 +25,7 @@ library
     DeMoDNote.Error
     DeMoDNote.Monitor
     DeMoDNote.Recording
+    DeMoDNote.Export
     DeMoDNote.Scale
     DeMoDNote.Arpeggio
     DeMoDNote.BPM
